Archive2/b0/6b6283c2e1aee3/output
main.cpp: In constructor 'Foo<T>::Foo(Args&& ...)':
main.cpp:8:41: error: 'forward' is not a member of 'std'
     Foo(Args&& ...args) : inner_object_(std::forward<Args>(args)...) {}
                                         ^
main.cpp:8:58: error: expected primary-expression before '>' token
     Foo(Args&& ...args) : inner_object_(std::forward<Args>(args)...) {}
                                                          ^
